[project]
name = "azure-ai-agent-service"
version = "0.2.0"
description = "Azure Postgres and Azure AI Agent service examples"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "azure-identity",
    "opentelemetry-sdk",
    "azure-monitor-opentelemetry",
]

[dependency-groups]
dev = ["ipykernel~=6.0", "ipywidgets~=8.0", "mypy~=1.0", "ruff~=0.12.0"]
azure-ai = ["azure-ai-projects==1.0.0b7"]
utilities = ["python-dotenv~=1.0"]

[tool.uv]
default-groups = "all"
